# WireFrame

./: .gitignore  CMakeLists.txt  README.md  SceneObjectInterface.h  applicationconfig.cpp  applicationconfig.h  box.cpp  box.h  bsplinefield.cpp  bsplinefield.h  bsplinemodel.cpp  bsplinemodel.h  bsplinewindow.cpp  bsplinewindow.h  bsplinewindow.ui  camera.cpp  camera.h  helpwindow.cpp  helpwindow.h  helpwindow.ui  lightsource.cpp  lightsource.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quadrangle.cpp  quadrangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  viewinterface.cpp  viewinterface.h  wireframefield.cpp  wireframefield.h  wireframemodel.cpp  wireframemodel.h  wireframermodel.cpp  wireframermodel.h
resource/: StandfordBunny.render  StandfordBunny.scene  config.cfg  config_1.cfg  config_test.cfg
